# Flutter-On-device-LLM

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts  google-services.json
android/app/src/main/kotlin/com/flutterai/flutter_ai/: MainActivity.kt
ios/: Podfile  llama_native.podspec
ios/Runner/: GoogleService-Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_start.dart  main.dart
lib/llm/: llama_ffi.dart  llama_service.dart  llm_worker.dart
lib/model/: model_manager.dart  model_registry.dart
lib/ui/: chat_screen.dart  model_setup_screen.dart  settings_screen.dart
native/llama_cpp/: CMakeLists.txt  llama_wrapper.cpp  llama_wrapper.h
